# Clinical-Trial-Cohort-Matching-System

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  metabase_setup.sql  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  (+3 more)
pipelines/: __init__.py  retrain_pipeline.py
scripts/: __init__.py  benchmark.py  migrate.py
src/: __init__.py  api_v1.py  eligibility.py  features.py  fhir.py  main.py  ml_prediction.py  models.py  monitoring.py  monitoring_router.py  nlp.py  recruitment.py  schemas.py  seed_data.py  validators.py
tests/: conftest.py  test_api.py  test_api_extended.py  test_api_v1.py  test_api_v1_extended.py  test_benchmark.py  test_eligibility.py  test_eligibility_extended.py  test_eligibility_extended2.py  test_eligibility_operators.py  test_eligible_patients_endpoint.py  test_error_handlers.py  test_features.py  test_features_extended2.py  test_fhir.py  test_fhir_extended.py  test_fhir_retry.py  test_integration_e2e.py  test_middleware.py  test_migrations.py  test_ml_extended.py  test_ml_prediction.py  test_models.py  test_models_extended.py  test_monitoring.py  test_monitoring_router.py  test_monitoring_set_reference.py  test_new_endpoints.py  test_nlp.py  test_nlp_extended.py  test_pipeline.py  test_pipeline_extended.py  test_recruitment.py  test_recruitment_extended.py  test_retrain_pipeline.py  test_schemas.py  test_schemas_extended.py  test_schemas_patch.py  test_summary_endpoints.py  test_validators.py  (+1 more)
