[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clinical-trial-cohort-matching"
version = "1.0.0"
description = "Automated cohort matching system for clinical trials"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "atharvadevne123", email = "devneatharva@gmail.com"}]

[tool.setuptools.packages.find]
where = ["."]