[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-trial-cohort-matching"
version = "1.0.0"
description = "Automated cohort matching system for clinical trials"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "atharvadevne123", email = "devneatharva@gmail.com"}]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/seed_data.py", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 50
